--- a/WebContent/admin/adm_intro.html
+++ b/WebContent/admin/adm_intro.html
@@ -5,6 +5,16 @@
 <title>Insert title here</title>
 </head>
 <body>
-관리자 페이지
+<div style="height:10px;"></div>
+
+<div id="div1">
+	<h1>관리자 페이지 입니다.</h1><br>
+	***관리자 페이지 이용시 준수사항***<br>
+	1.<br>
+	2.<br>
+	3.<br>
+	4.<br>
+	5.<br>
+</div>
 </body>
 </html>
