--- a/WebContent/admin/adm_main.html
+++ b/WebContent/admin/adm_main.html
@@ -3,9 +3,61 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../css/aos.css">
+    <link rel="stylesheet" href="../css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="../css/jquery.timepicker.css">
+    <link rel="stylesheet" href="../css/fancybox.min.css">
+    <link rel="stylesheet" href="../fonts/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="../fonts/fontawesome/css/font-awesome.min.css">
+    <!-- Theme Style -->
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mycss.css">
+
+<style>
+	a{
+	font-size: 18px;
+	}
+
+</style>
+
 </head>
 <body>
-	<iframe src="adm_menu.html" height="800px" width="200px">link_menu</iframe>
-	<iframe src="adm_intro.html" height="800px" width="70%" name="main">link_intro</iframe>
+
+
+<div style="height:20px;"></div>
+
+<!-- 관리자 페이지 메인 -->
+<section style="display:flex;">
+	<nav style="width:200px;padding:20px;">
+		<form method="get">
+		<a href="./adm_allview_select.jsp" target="main">*예약 상황</a><br><br>
+		<a href="./adm_oneview.jsp" target="main">*예약 조회</a><br><br>
+		<a href="./adm_make_user.jsp" target="main">*회원 생성</a><br><br>
+		<a href="./adm_notice_New_content.jsp" target="main">*공지사항 작성</a><br><br>
+		<a href="./adm_notice.jsp" target="main">*공지사항 확인</a><br><br>
+		<a href="../index.jsp">*돌아가기</a><br><br>
+		</form>
+	</nav>
+	<div style="width: 100%;">
+		<iframe src="adm_intro.html" height="1000px" width="90%" name="main"  frameborder="0">link_intro</iframe>
+	</div>
+</section>
+
+
+ <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/owl.carousel.min.js"></script>
+    <script src="../js/jquery.stellar.min.js"></script>
+    <script src="../js/jquery.fancybox.min.js"></script>
+    <script src="../js/aos.js"></script>
+    <script src="../js/bootstrap-datepicker.js"></script> 
+    <script src="../js/jquery.timepicker.min.js"></script> 
+    <script src="../js/main.js"></script>
+    <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
 </body>
 </html>
