--- a/WebContent/admin/adm_menu.html
+++ b/WebContent/admin/adm_menu.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
+<!-- 프레임의 왼쪽에 메뉴를  표시하는 부분이다. -->
 	<form method="get">
 	<a href="./adm_allview.jsp" target="main">*예약 상황</a><br>
 	<a href="./adm_oneview.jsp" target="main">*예약 조회</a><br><br>
